# chat-zk

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/chat-bg-zk/: README.md  README_ENDPOINTS_CMD.md  README_endpoints.md  alembic.ini  chatbg.db  migrate.py  requirements.txt  setup.py  test_chatbg.db
apps/chat-bg-zk/app/: database.py  main.py
apps/chat-bg-zk/app/models/: contact.py  face_commitment.py  message.py  payment.py  user.py
apps/chat-bg-zk/migrations/: env.py
apps/chat-bg-zk/tests/: conftest.py  test_contact.py  test_message.py  test_payment.py  test_user.py
apps/hasher/: Cargo.toml  proof.json
apps/hasher/guest/: Cargo.toml  build.rs
apps/hasher/guest/src/: main.rs
apps/hasher/host/: Cargo.toml
apps/hasher/host/src/: main.rs
apps/hasher/methods/guest/: Cargo.toml
apps/proof-submission/: index.js  package-lock.json  package.json
apps/sample-app/: pnpm-lock.yaml
apps/sample-contracts/src/: ZkFactorization.sol
scripts/: download-models.sh
src/app/: base_buttons.tsx  chat.tsx  contact.tsx  financial-dash.tsx  gear_buttons.tsx  gift_receive.tsx  gift_return.tsx  gift_transfer.tsx  globals.css  layout.tsx  modify_user.tsx  next.config.ts  page copy mono.tsx  page.tsx  payments.txt  send-payment.txt  transfer.tsx
src/app/web3/: crypto_helper.tsx  web3_abstraction_helper.tsx  xion_rpc.tsx
src/components/: UserInfo.tsx  auth-provider.tsx  face-enrollment.tsx  face-login.tsx  face-recognition.tsx  sign-arb.tsx
src/lib/: face-api-utils.ts  face-recognition.ts  face-storage.ts  fallback-face-utils.ts  mock-face-recognition.ts  zk-utils.ts
src/ui/: Icons.tsx  Logo.tsx
(+34 files in other folders)
