[workspace]
resolver = "2"
members = [
    "guest",
    "host",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = 1
lto = true

[workspace.dependencies]
risc0-zkvm = { version = "0.19", features = ["prove", "verify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
ciborium = "0.2"
