[package]
name = "face-verification-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.19", features = ["prove", "verify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
face-verification-guest = { path = "../guest" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
ciborium = "0.2"

[dev-dependencies]
risc0-zkvm = { version = "0.19", features = ["prove", "verify"] }
